@@ -1,3 +1,6 @@
+2006-08-12  Brian Matherly  <brian@gramps-project.org>
+	* src/plugins/FamilyGroup.py: use family_id instead of spouse_id
+
 2006-08-12  Don Allingham  <don@gramps-project.org>
 	* src/Merge/_MergePerson.py: properly merge notes
 
